--- a/config/i3/config
+++ b/config/i3/config
@@ -325,7 +325,7 @@ bindcode $alt+135   exec --no-startup-id "play ~/cancer/google-it.mp3"
 ##################################################
 
 assign [class="Caprine" window_role="browser-window"] $ws4
-assign [class="Discord" window_role="browser-window"] $ws4
+assign [class="discord" window_role="browser-window"] $ws4
 # Move to workspace for Spotify because they don't set window infos correctly
 for_window [class="Spotify"] move to workspace $ws5
 
