Tweak twmn configuration

--- a/config/twmn/twmn.conf
+++ b/config/twmn/twmn.conf
@@ -2,28 +2,28 @@
 absolute_position=
 always_on_top=true
 background_color=white
-bounce=false
-bounce_duration=400
+bounce=true
+bounce_duration=100
 font=Noto Sans
 font_size=13
 font_variant=medium
 foreground_color=black
 height=37
 in_animation=2
-in_animation_duration=200
-max_length=80
-offset_x=-1
+in_animation_duration=300
+max_length=93
+offset_x=0
 offset_y=0
-opacity=92
+opacity=95
 out_animation=13
 out_animation_duration=1000
 position=bottom_right
 screen=
 
 [icons]
-critical_icon=
-info_icon=
-warning_icon=
+critical=/usr/share/icons/Flat-Remix-Blue/status/scalable/dialog-error.svg
+info=
+warning=/usr/share/icons/Flat-Remix-Blue/status/scalable/dialog-warning.svg
 
 [main]
 activate_command=
