--- a/config/i3/config
+++ b/config/i3/config
@@ -233,13 +233,21 @@ for_window [class="Gnome-calculator"] floating enable
 for_window [class="Gpicview"] floating enable
 for_window [class="Gpicview"] move position center
 for_window [class="Gpicview"] resize set 1408 792
-for_window [class="imv"] floating enable
+for_window [class="^imv$"] floating enable
 for_window [class="Lxappearance"] border pixel 2
 for_window [class="Lxappearance"] floating enable
 for_window [class="nitrogen"] floating enable
 for_window [class="Parole"] floating enable
+for_window [class="Qalculate-gtk"] border pixel 2
+for_window [class="Qalculate-gtk"] floating enable
+for_window [instance="java-lang-Thread" title="^win0"] border pixel 2 # jetbrains splashscreen
+for_window [instance="java-lang-Thread" title="win0"] floating enable
+for_window [instance="jetbrains-pycharm" title="^ $"] border pixel 2 # jetbrains pycharm splashscreen
+for_window [instance="jetbrains-pycharm" title="^ $"] floating enable
 for_window [instance="sun-awt-X11-XDialogPeer"] border pixel 2
 for_window [instance="sun-awt-X11-XDialogPeer"] floating enable
+for_window [title="Confirm Exit"] border pixel 2 # jetbrains exit confirmation
+for_window [title="Confirm Exit"] floating enable
 for_window [title="Minecraft Launcher"] border pixel 2
 for_window [title="Minecraft Launcher"] floating enable
 for_window [title="Network Connections"] border pixel 2
