Fix lock screen unable to start because of input grabbing
https://github.com/i3/i3/issues/3298
https://i3wm.org/docs/userguide.html#keybindings

--- a/config/i3/config
+++ b/config/i3/config
@@ -301,7 +301,7 @@ bindsym   $super+x    exec --no-startup-id "rofi -show run"
 bindcode  $super+94  exec --no-startup-id "rofi -show window -show-icons"
 
 # Lock screen
-bindsym $super+l exec --no-startup-id "~/scripts/lock.sh"
+bindsym --release $super+l exec --no-startup-id "~/scripts/lock.sh"
 
 # Screenshot with selection
 bindsym Print exec --no-startup-id "~/scripts/screenshot.sh"
