--- a/config/i3/config
+++ b/config/i3/config
@@ -238,6 +238,8 @@ for_window [class="Lxappearance"] border pixel 2
 for_window [class="Lxappearance"] floating enable
 for_window [class="nitrogen"] floating enable
 for_window [class="Parole"] floating enable
+for_window [class="Pinentry-gtk-2"] border pixel 2
+for_window [class="Pinentry-gtk-2"] floating enable
 for_window [class="Qalculate-gtk"] border pixel 2
 for_window [class="Qalculate-gtk"] floating enable
 for_window [instance="java-lang-Thread" title="^win0"] border pixel 2 # jetbrains splashscreen
