Change GTK theme to Arc-Dark and make Qt use it

--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Flat-Remix-GTK
+gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Flat-Remix-Blue
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-name=Breeze_Hacked
