--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "vim/pack/plugins/start/vim-toml"]
 	path = vim/pack/plugins/start/vim-toml
 	url = https://github.com/cespare/vim-toml.git
+[submodule "config/i3/scripts"]
+	path = config/i3/scripts
+	url = git@github.com:maximelouet/i3blocks-scripts
