--- a/config/i3/config
+++ b/config/i3/config
@@ -359,8 +359,8 @@ exec --no-startup-id "compton --config ~/.config/compton.conf -b"
 # URxvt daemon for better resource handling
 exec --no-startup-id "urxvtd -q -o -f"
 
-# Warmer screen color at night (Paris location)
-exec --no-startup-id "redshift -l 48.8075:2.2620"
+# Warmer screen color at night (Kent University location)
+exec --no-startup-id "redshift -l 51.2897:1.0531"
 
 # Bluetooth manager
 exec --no-startup-id "blueman-applet"
