--- a/config/i3/config
+++ b/config/i3/config
@@ -232,7 +232,6 @@ for_window [class="Gedit"] floating enable
 for_window [class="Gnome-calculator"] floating enable
 for_window [class="Gpicview"] floating enable
 for_window [class="Gpicview"] move position center
-for_window [class="Gpicview"] resize set 1408 792
 for_window [class="^imv$"] floating enable
 for_window [class="Lxappearance"] border pixel 2
 for_window [class="Lxappearance"] floating enable
@@ -242,8 +241,12 @@ for_window [class="Pinentry-gtk-2"] border pixel 2
 for_window [class="Pinentry-gtk-2"] floating enable
 for_window [class="Qalculate-gtk"] border pixel 2
 for_window [class="Qalculate-gtk"] floating enable
+for_window [instance="file_progress"] border pixel 2 # Nemo file operations
+for_window [instance="file_progress"] floating enable
 for_window [instance="java-lang-Thread" title="^win0"] border pixel 2 # jetbrains splashscreen
 for_window [instance="java-lang-Thread" title="win0"] floating enable
+for_window [instance="jetbrains-phpstorm" title="^ $"] border pixel 2 # jetbrains phpstorm splashscreen
+for_window [instance="jetbrains-phpstorm" title="^ $"] floating enable
 for_window [instance="jetbrains-pycharm" title="^ $"] border pixel 2 # jetbrains pycharm splashscreen
 for_window [instance="jetbrains-pycharm" title="^ $"] floating enable
 for_window [instance="sun-awt-X11-XDialogPeer"] border pixel 2
