--- a/config/i3/config
+++ b/config/i3/config
@@ -241,6 +241,8 @@ for_window [class="Pinentry-gtk-2"] border pixel 2
 for_window [class="Pinentry-gtk-2"] floating enable
 for_window [class="Qalculate-gtk"] border pixel 2
 for_window [class="Qalculate-gtk"] floating enable
+for_window [class="Skype"] border pixel 2
+for_window [class="Skype"] floating enable
 for_window [instance="file_progress"] border pixel 2 # Nemo file operations
 for_window [instance="file_progress"] floating enable
 for_window [instance="java-lang-Thread" title="^win0"] border pixel 2 # jetbrains splashscreen
