Add more libinput-gestures
Invert workspace back/forward movement, add browser back/forward
shortcut, and add pinch to zoom.

--- a/config/libinput-gestures.conf
+++ b/config/libinput-gestures.conf
@@ -63,11 +63,13 @@
 #gesture swipe down	_internal ws_down
 # gesture swipe down	xdotool key super+Page_Up
 
-# Browser go forward (works only for Xorg, and Xwayland clients)
-gesture swipe left	i3-msg workspace prev
+gesture swipe left	i3-msg workspace next
 
-# Browser go back (works only for Xorg, and Xwayland clients)
-gesture swipe right	i3-msg workspace next
+gesture swipe right	i3-msg workspace prev
+
+gesture swipe up xdotool key XF86Back
+
+gesture swipe down xdotool key XF86Forward
 
 # NOTE: If you don't use "natural" scrolling direction for your touchpad
 # then you may want to swap the above default left/right and up/down
@@ -114,9 +116,8 @@ gesture swipe right	i3-msg workspace next
 # PINCH GESTURES:
 ###############################################################################
 
-# GNOME SHELL open/close overview (works for GNOME on Xorg only)
-#gesture pinch in	xdotool key ctrl+minus
-#gesture pinch out	xdotool key ctrl+equal
+gesture pinch in	xdotool key ctrl+minus
+gesture pinch out	xdotool key ctrl+equal
 
 # KDE Plasma open/close overview
 # gesture pinch in	xdotool key ctrl+F9
