--- a/config/i3/config
+++ b/config/i3/config
@@ -243,6 +243,8 @@ for_window [class="nitrogen"] floating enable
 for_window [class="Parole"] floating enable
 for_window [class="Pinentry-gtk-2"] border pixel 2
 for_window [class="Pinentry-gtk-2"] floating enable
+for_window [class="pritunl"] border pixel 2
+for_window [class="pritunl"] floating enable
 for_window [class="Qalculate-gtk"] border pixel 2
 for_window [class="Qalculate-gtk"] floating enable
 for_window [class="Skype"] border pixel 2
