--- a/config/i3/config
+++ b/config/i3/config
@@ -237,6 +237,8 @@ for_window [class="java-lang-Thread" title="^win0"] border pixel 2 # jetbrains s
 for_window [class="java-lang-Thread" title="win0"] floating enable
 for_window [class="jetbrains-toolbox"] border pixel 2
 for_window [class="jetbrains-toolbox"] floating enable
+for_window [class="jetbrains-webstorm" title="win0"] border pixel 2
+for_window [class="jetbrains-webstorm" title="win0"] floating enable
 for_window [class="Lxappearance"] border pixel 2
 for_window [class="Lxappearance"] floating enable
 for_window [class="nitrogen"] floating enable
@@ -257,8 +259,9 @@ for_window [instance="jetbrains-pycharm" title="^ $"] border pixel 2 # jetbrains
 for_window [instance="jetbrains-pycharm" title="^ $"] floating enable
 for_window [instance="sun-awt-X11-XDialogPeer"] border pixel 2
 for_window [instance="sun-awt-X11-XDialogPeer"] floating enable
-for_window [instance="sun-awt-X11-XFramePeer"] border pixel 2
-for_window [instance="sun-awt-X11-XFramePeer"] floating enable
+for_window [instance="sun-awt-X11-XFramePeer" title="Welcome to Android Studio"] border pixel 2
+for_window [instance="sun-awt-X11-XFramePeer" title="Welcome to Android Studio"] floating enable
+for_window [title="^Android Emulator - "] floating enable
 for_window [title="Confirm Exit"] border pixel 2 # jetbrains exit confirmation
 for_window [title="Confirm Exit"] floating enable
 for_window [title="Minecraft Launcher"] border pixel 2
