Update redshift base location to Paris

--- a/config/i3/config
+++ b/config/i3/config
@@ -377,8 +377,8 @@ exec --no-startup-id "compton --config ~/.config/compton.conf -b"
 # URxvt daemon for better resource handling
 exec --no-startup-id "urxvtd -q -o -f"
 
-# Warmer screen color at night (Kent University location)
-exec --no-startup-id "redshift -l 51.2897:1.0531"
+# Warmer screen color at night
+exec --no-startup-id "redshift -l 48.8211:2.3687" # Paris Porte d'Ivry
 
 # Bluetooth manager
 exec --no-startup-id "blueman-applet"
