Set default git branch to `main`

--- a/config/git/config
+++ b/config/git/config
@@ -5,6 +5,8 @@
 [core]
   autocrlf = input
   editor = vim
+[init]
+  defaultBranch = main
 [alias]
   abort = rebase --abort
   amend = commit --amend
