--- a/config/autorandr/work/config
+++ b/config/autorandr/work/config
@@ -1,15 +1,26 @@
 output DP-1
 off
-output HDMI-1
-off
 output DP-2
 off
-output HDMI-2
+output DP-3
+off
+output DP-4
+off
+output DP-3-1
+off
+output eDP-1
+crtc 0
+mode 1920x1200
+pos 0x0
+primary
+rate 59.95
+output DP-3-1-1
+crtc 2
 mode 1920x1080
 pos 0x0
 rate 60.00
-output eDP-1
+output DP-3-1-8
+crtc 1
 mode 1920x1080
 pos 1920x0
-primary
-rate 60.03
+rate 60.00
