--- a/config/git/config
+++ b/config/git/config
@@ -22,6 +22,7 @@
   poule = pull
   poulet = pull
   p = pull
+  pushf = push --force-with-lease
   r = restore
   sc = !git commit -am "Sync commit" && git push # this doesn't work either??
   sd = diff --staged
