Add rofi-pass i3 shortcut

--- a/config/i3/config
+++ b/config/i3/config
@@ -312,6 +312,7 @@ bindsym $super+Return exec $terminal
 bindsym $super+e      exec "nemo"
 bindsym $super+f      exec "firefox-developer-edition"
 bindsym $super+c      exec "clipster -s"
+bindsym $super+v      exec "rofi-pass"
 
 # Program launcher
 bindsym   $super+w    exec --no-startup-id "rofi -show drun -show-icons"
