Add more i3 floating windows

--- a/config/i3/config
+++ b/config/i3/config
@@ -245,6 +245,8 @@ for_window [class="lite"] border pixel 2
 for_window [class="lite"] floating enable
 for_window [class="Lxappearance"] border pixel 2
 for_window [class="Lxappearance"] floating enable
+for_window [class="Mojosetup"] border pixel 2
+for_window [class="Mojosetup"] floating enable
 for_window [class="nitrogen"] floating enable
 for_window [class="Parole"] floating enable
 for_window [class="Pinentry-gtk-2"] border pixel 2
@@ -253,8 +255,12 @@ for_window [class="pritunl"] border pixel 2
 for_window [class="pritunl"] floating enable
 for_window [class="Qalculate-gtk"] border pixel 2
 for_window [class="Qalculate-gtk"] floating enable
+for_window [class="SimpleScreenRecorder"] border pixel 2
+for_window [class="SimpleScreenRecorder"] floating enable
 for_window [class="Skype"] border pixel 2
 for_window [class="Skype"] floating enable
+for_window [class="torbrowser-launcher"] border pixel 2
+for_window [class="torbrowser-launcher"] floating enable
 for_window [instance="file_progress"] border pixel 2 # Nemo file operations
 for_window [instance="file_progress"] floating enable
 for_window [instance="jetbrains-phpstorm" title="^ $"] border pixel 2 # jetbrains phpstorm splashscreen
