Show twmn on first (primary) monitor only

--- a/config/twmn/twmn.conf
+++ b/config/twmn/twmn.conf
@@ -18,7 +18,7 @@ opacity=95
 out_animation=13
 out_animation_duration=1000
 position=bottom_right
-screen=
+screen=1
 
 [icons]
 critical=/usr/share/icons/Flat-Remix-Blue/status/scalable/dialog-error.svg
