--- a/config/i3/config
+++ b/config/i3/config
@@ -17,17 +17,17 @@ set $ctrl   Control
 set $shift  Shift
 
 # Workspace names
-set $ws0  "  0  "
-set $ws1  "  1  "
-set $ws2  "  2  "
-set $ws3  "  3  "
-set $ws4  "  4  "
-set $ws5  "  5  "
-set $ws6  "  6  "
-set $ws7  "  7  "
-set $ws8  "  8  "
-set $ws9  "  9  "
-set $ws10 "  π  "
+set $ws0  "0"
+set $ws1  "1"
+set $ws2  "2"
+set $ws3  "3"
+set $ws4  "4"
+set $ws5  "5"
+set $ws6  "6"
+set $ws7  "7"
+set $ws8  "8"
+set $ws9  "9"
+set $ws10 "π"
 
 # Other
 set $terminal "urxvtc"
@@ -187,6 +187,7 @@ bar {
   output primary
 
   height 37 # i3gaps specific
+  workspace_min_width 35
 
   colors {
     background  #111111
@@ -418,9 +419,9 @@ exec --no-startup-id "libinput-gestures-setup start"
 exec --no-startup-id "autorandr -c"
 
 # Restore workspaces layout
-exec --no-startup-id "i3-msg 'workspace \"  1  \"; append_layout ~/.dotfiles/config/i3/workspaces/1.json'"
-exec --no-startup-id "i3-msg 'workspace \"  4  \"; append_layout ~/.dotfiles/config/i3/workspaces/4.json'"
-exec --no-startup-id "i3-msg 'workspace \"  5  \"; append_layout ~/.dotfiles/config/i3/workspaces/5.json'"
+exec --no-startup-id "i3-msg 'workspace 1; append_layout ~/.dotfiles/config/i3/workspaces/1.json'"
+exec --no-startup-id "i3-msg 'workspace 4; append_layout ~/.dotfiles/config/i3/workspaces/4.json'"
+exec --no-startup-id "i3-msg 'workspace 5; append_layout ~/.dotfiles/config/i3/workspaces/5.json'"
 
-# Set initial workspace workspace to "  1  " (not the first one in alphabetical order)
-exec --no-startup-id "sleep 1 && i3-msg 'workspace \"  1  \"'"
+# Set initial workspace workspace to 1 (not the first one in alphabetical order)
+exec --no-startup-id "sleep 1 && i3-msg 'workspace 1'"
