Add another i3bar for secondary displays

--- a/config/i3/config
+++ b/config/i3/config
@@ -177,14 +177,43 @@ mode "resize" {
 
 
 ##################################################
-# Bar
+# Bars
 ##################################################
 
+# Primary screen bar
 bar {
+  output primary
   status_command i3blocks -c ~/.config/i3/blocks
   position bottom
   font pango:Noto Sans, Awesome 12.5
-  output primary
+  tray_output primary
+  tray_padding 3
+
+  height 37 # i3gaps specific
+  workspace_min_width 35
+
+  colors {
+    background  #111111
+    statusline  #ccccdc
+
+    # Workspace names color
+    # class             border  backgr. text
+    focused_workspace   #dddddd #dddddd #000000
+    active_workspace    #ff0000 #ff0000 #000000
+    inactive_workspace  #2f2f3f #2f2f3f #aaaaaa
+    urgent_workspace    #f44336 #f44336 #ffffff
+    binding_mode        #EF6C00 #EF6C00 #ffffff
+  }
+}
+
+# Secondary screens bars
+bar {
+  output nonprimary
+  status_command i3blocks -c ~/.config/i3/blocks_secondary
+  position bottom
+  font pango:Noto Sans, Awesome 12.5
+  tray_output primary
+  tray_padding 3
 
   height 37 # i3gaps specific
   workspace_min_width 35
