--- a/config/cava/config
+++ b/config/cava/config
@@ -11,12 +11,12 @@
 
 # Sensitivity in  %. If you think the bars are to low/response is to little, try
 # increasing this value 200 means double height. Accepts only non-negative values.
-sensitivity = 70
+; sensitivity = 60
 
 # Autosens will attempt to decrease sensitivity if cava peaks. 1 = on, 0 = off
 # overshoot allows bars to overshoot (in % of terminal height) without initiating autosens
-autosens = 0
-; overshoot = 20
+autosens = 1
+overshoot = 80
 
 # The number of bars (0-200). 0 (default) sets it to auto (fill up console).
 # width of bars and space between bars in number of characters. Default width 3 and space 1.
