--- a/config/autorandr/home/config
+++ b/config/autorandr/home/config
@@ -1,15 +1,27 @@
+output DP-1
+off
 output HDMI-1
 off
 output DP-2
 off
 output HDMI-2
 off
-output eDP-1
+output DP-1-1
+off
+output DP-1-1-1
+crtc 2
 mode 1920x1080
-pos 0x0
-primary
+pos 2560x0
 rate 60.00
-output DP-1
+rotate right
+output DP-1-1-8
+crtc 0
+mode 2560x1440
+pos 0x270
+primary
+rate 59.95
+output eDP-1
+crtc 1
 mode 1920x1080
-pos 0x0
+pos 640x1710
 rate 60.00
