--- a/config/i3/config
+++ b/config/i3/config
@@ -351,7 +351,7 @@ for_window [window_type="menu"] floating enable
 bindsym $mod+Return   exec $terminal
 bindsym $super+Return exec $terminal
 bindsym $super+e      exec "nemo"
-bindsym $super+f      exec "firefox-developer-edition"
+bindsym $super+f      exec "firefox"
 bindsym $super+c      exec "clipster -s"
 bindsym $super+v      exec "rofi-pass"
 bindsym $super+q      exec "rofimoji"
