kitty: add finer font size control

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -51,3 +51,9 @@ kitty_mod ctrl+alt
 map f1 show_scrollback
 map kitty_mod+x pass_selection_to_program ~/scripts/pass-kitty-selection-to-firefox.sh
 map kitty_mod+e kitten hints --customize-processing weechat-hints.py
+
+# Finer font size control than default
+map kitty_mod+equal change_font_size all +0.5
+map kitty_mod+minus change_font_size all -0.5
+# Reset font size with mod+0 (à in azerty)
+map kitty_mod+0xe0 change_font_size all 0
