Sync autorandr home setup

--- a/config/autorandr/home/config
+++ b/config/autorandr/home/config
@@ -12,14 +12,12 @@ output eDP-1
 off
 output DP-1-1-1
 crtc 2
-gamma 1.0:0.833:0.714
 mode 1920x1080
 pos 2560x0
 rate 60.00
-rotate right
+rotate left
 output DP-1-1-8
 crtc 0
-gamma 1.0:0.833:0.714
 mode 2560x1440
 pos 0x240
 primary
