fontconfig: show emojis in terminal :)

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -1,11 +1,30 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-    <!-- This prevents MS Calibri font from looking ugly -->
-    <!-- See https://ask.libreoffice.org/en/question/7127/calibri-font-not-rendering-correctly/ -->
-    <match target="font">
-        <edit name="embeddedbitmap" mode="assign">
-            <bool>false</bool>
-        </edit>
-    </match>
+  <!-- This prevents MS Calibri font from looking ugly -->
+  <!-- See https://ask.libreoffice.org/en/question/7127/calibri-font-not-rendering-correctly/ -->
+  <match target="font">
+    <edit name="embeddedbitmap" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
+  <!-- Get nice emojis in terminal :) -->
+  <alias>
+    <family>serif</family>
+    <prefer>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>sans-serif</family>
+    <prefer>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>monospace</family>
+    <prefer>
+      <family>Noto Color Emoji</family>
+    </prefer>
+  </alias>
 </fontconfig>
