kitty: allow quitting with running background processes

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -36,9 +36,9 @@ selection_background #d0baf5
 
 ## Advanced
 
-# default value; "no" means that the terminal won't exit if there are
+# "no" means that the terminal won't exit if there are
 # background processes running
-close_on_child_death no
+close_on_child_death yes
 
 update_check_interval 0
 
